--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: slategray;
+  font-family: "Poppins", sans-serif;
 }
 .dark-theme {
   background-color: black;
